# Ecal-to-ROS

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
cmake/: ecal_to_ros-msg-extras.cmake  ecal_to_ros-msg-paths.cmake  ecal_to_rosConfig.cmake
launch/: ecal_to_ros.launch
msg/: RadarDetection.msg  RadarDetectionImage.msg  RadarStatus.msg
